fix: arrow spacing

--- a/src/styles/index.module.css
+++ b/src/styles/index.module.css
@@ -66,7 +66,7 @@
 .arrow {
   position: absolute;
   bottom: 30px;
-  left: 48%;
+  left: 49%;
   transform: translateX(-50%) rotate(45deg);
   box-sizing: border-box;
   height: 50px;
